--- a/img.html
+++ b/img.html
@@ -45,17 +45,17 @@
     <p>updated 26th october 2024</p>
 
     <div class="image-container">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 1">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 2">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 3">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img1">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/Yaauusss.jpg" alt="img2">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/4kaeEra.jpg" alt="img3">
         
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 4">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 5">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 6">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img4">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img5">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img6">
 
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 7">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 8">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="Image 9">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img7">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img8">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img9">
     </div>
 </body>
 
