--- a/img.html
+++ b/img.html
@@ -49,8 +49,8 @@
         <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/Yaauusss.jpg" alt="img2">
         <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/4kaeEra.jpg" alt="img3">
         
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img4">
-        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img5">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/100_0583.JPG" alt="img4">
+        <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/100_0624.JPG" alt="img5">
         <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img6">
 
         <img src="https://raw.githubusercontent.com/yKorrina/korrina.shop/refs/heads/main/img/MyFaceOwo.png" alt="img7">
