--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">spotify</a></h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bandcamp.com/" target="_blank">bandcamp</a></h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://www.instagram.com/7korrina/" target="_blank">instagram</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">twitter</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/korrina00" target="_blank">twitter</a></h1>
   </div>
   <div class="clickable-area" onclick="window.location.href='secret';"></div>
   <script>
